# rstube

./: Cargo.toml
.github/workflows/: docs.yml  release.yml
docs/: book.toml  mpv-config.md
docs/src/: SUMMARY.md  cache.md  commands.md  completion.md  files.md  getting-started.md  history.md  installation.md  introduction.md  mpv-config.md  playlists.md  videos.md
src/: config.rs  main.rs  mpv.rs  playlist.rs  state.rs  tui.rs
tests/: main.rs
tests/common/: mod.rs
tests/tests_mod/: persistence.rs  version.rs
