[package]
name = "rstube"
version = "0.3.0"
edition = "2024"
authors = ["Mark Veltzer <mark.veltzer@gmail.com>"]
description = "Search and play YouTube videos from the terminal"
license = "MIT"
repository = "https://github.com/veltzer/rstube"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ratatui = "0.29"
crossterm = "0.28"
toml = "0.8"
redb = "2"

[dev-dependencies]
tempfile = "3.8"
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1

# Release-equivalent build with debug symbols for profiling (samply/perf).
# Usage: `cargo build --profile profiling`; binary lands in target/profiling/.
[profile.profiling]
inherits = "release"
strip = false
debug = true
